--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -5,12 +5,15 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 
- --color-mint-500 : oklch(0.72 0.11 178);
+  --color-mint-500: oklch(0.72 0.11 178);
 }
+
+@import "../../public/assets/font/FiraSans.css";
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-playpen-sans: 'Playpen Sans', 'Playpen Sans Fallback';
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,4 +27,10 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer utilities {
+  .font-header-blog {
+    font-family: var(--font-playpen-sans);
+  }
 }
