--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -13,7 +13,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --font-playpen-sans: 'Playpen Sans', 'Playpen Sans Fallback';
+  --font-playpen-sans: "Playpen Sans", "Playpen Sans Fallback";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,5 +32,21 @@ body {
 @layer utilities {
   .font-header-blog {
     font-family: var(--font-playpen-sans);
+  }
+
+  .animated-title {
+    display: inline;
+    background-image: linear-gradient(to right, #d1dcf8 100%, #d1dcf8 100%);
+    background-position: 0 100%;
+    background-repeat: no-repeat;
+    background-size: 0% calc(1.5em / 3); /* 1/3 line-height */
+    transition: background-size 0.7s ease;
+    line-height: 1.5;
+    cursor: pointer;
+    text-align: left;
+  }
+
+  .animated-title:hover {
+    background-size: 100% calc(1.5em / 3);
   }
 }
