--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,8 +2,6 @@
 @custom-variant dark (&:where(.dark, .dark *));
 @custom-variant light (&:where(.light, .light *));
 
-
-
 @theme {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
@@ -31,7 +29,6 @@ body {
 }
 
 @layer utilities {
-
   .animated-title {
     display: inline;
     background-image: linear-gradient(to right, #d1dcf8 100%, #d1dcf8 100%);
@@ -52,5 +49,23 @@ body {
     background-image: url("../../public/icon/vietnam.png");
     background-size: cover;
     background-position: center;
+  }
+
+  .photo-wrapper {
+    position: relative;
+    display: inline-block;
+  }
+
+  .photo-wrapper::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    right: -5.5px;
+    width: 105%;
+    height: 105%;
+    background-color: #f1e9ffb2;
+    z-index: -1;
+    transform: rotate(-2deg);
+    border-radius: 8px;
   }
 }
